--- a/html-render-layout/templates/layout.html
+++ b/html-render-layout/templates/layout.html
@@ -7,10 +7,7 @@
     </head>
     <body>
         <header>
-            <ul>
-                <li><a href="{{url_for('home')}}">Home</a></li>
-                <li><a href="{{url_for('about')}}">About</a></li>
-            </ul>
+            {%include "navigation.html"%}
         </header>
         <div class="container">
             {%block content%}
